bhaai quary updates
